# blitz

./: .env.template  .gitignore  404.html  CNAME  LICENSE  README.md  Untitled  index.html  main.py  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: ci.yml  documentation.yml
.zed/: settings.json
api/: index.html
blitz/: __init__.py  app.py  core.py  parser.py  patch.py  settings.py
blitz/alembic/: env.py
blitz/api/: __init__.py  blitz_admin.py  blitz_api.py  logs.py
blitz/api/templates/: index.html
blitz/cli/: app.py  utils.py
blitz/cli/commands/: callback.py  clean.py  clone.py  compile.py  create.py  list.py  release.py  start.py  swagger.py
blitz/cli/errors/: __init__.py
blitz/db/: db.py  engine.py  errors.py  migrations.py  session.py
blitz/db/adapters/: in_memory.py  postgresql.py  sqlite.py
blitz/models/: __init__.py  base.py  utils.py
blitz/models/blitz/: __init__.py  config.py  field.py  file.py  resource.py
blitz/tools/: erd.py
blitz/ui/: blitz_ui.py  main.py  preprompt.txt  router.py
blitz/ui/components/: __init__.py  base.py  gpt_chat_components.py  header.py  json_editor.py  (+3 more)
blitzfile/: index.html
blitzfile/config/: index.html
blitzfile/reference/: index.html
blitzfile/relationships/: index.html
blitzfile/resources/: index.html
cli/: index.html
cli/clone/: index.html
cli/create/: index.html
cli/list/: index.html
cli/references/: index.html
cli/release/: index.html
cli/start/: index.html
custom_templates/pydantic_v2/: BaseModel.jinja2  RootModel.jinja2
dashboard/: index.html
dashboard/admin/: index.html
dashboard/blitz_file/: index.html
dashboard/diagram/: index.html
dashboard/gpt_builder/: index.html
dashboard/logs/: index.html
dashboard/swagger/: index.html
demo-blitz-app/: .blitz  blitz.json
demo-blitz-app/migrations/: 1708188440_a010627a9574.py
docs/: features.md  index.md  installation.md  quickstart.md
docs/api/: index.md
docs/blitzfile/: config.md  index.md  reference.md  relationship.md  relationships.md  resources.md
docs/cli/: clone.md  create.md  index.md  list.md  references.md  release.md  start.md
docs/css/: custom.css
docs/dashboard/: admin.md  blitz_file.md  diagram.md  gpt_builder.md  index.md  logs.md  swagger.md
docs/js/: custom.js
features/: index.html
installation/: index.html
migrations/: 1710260720_473c1c8fc477.py
random-blitz-app/: .blitz  blitz.yaml
search/: search_index.json
test/: .blitz  blitz.json
tests/: conftest.py  test_version.py
tests/fixtures/: app.py  blitz.py  cli.py  runner.py
(+54 files in other folders)
